public/css/chessmsgs.css
:root {
  --grey-color: #333333;
  --tan-color: #f0d9b5;
  --brown-color: #b58863;
}

body {
  background-color: var(--grey-color);
  color: white;
  font-family: Roboto, Helvetica, Arial, sans-serif;
  line-height: 1.4;
  margin: 0;
}

h1,
p {
  margin-top: 0;
}

ol {
  padding-left: 1.1rem;
}

.content-wrapper {
  position: relative;
  width: 100%;
  max-width: 32rem;
  padding: 2rem;
  margin: 0 auto;
}

.header__title {
  margin-bottom: 0.5rem;
}

.details {
  margin: 1.5rem 0;
}

.details__row {
  display: flex;
  align-items: baseline;
  justify-content: center;
  margin: 0.5rem 0;
}

.details__title {
  color: #B4886B;
  font-weight: bold;
  text-align: right;
  margin-right: 0.5rem;
  text-transform: uppercase;
  width: 50%;
}

.details__text {
  width: 50%;
}

.notation-322f9 {
  font-size: 11px;
}

.buttons {
  text-align: center;
}

.button--copy,
.button--instructions {
  display: none;
}

.button {
  color: var(--grey-color);
  background-color: var(--tan-color);
  border: none;
  padding: 0.8rem 1rem;
  text-align: center;
  text-decoration: none;
  font-size: 0.8rem;
  cursor: pointer;
  text-transform: uppercase;
  font-weight: bold;
  transition: background-color 0.25s;
  width: 100%;
  margin-bottom: 0.5rem;
}

.button:focus,
.button:hover {
  background-color: var(--brown-color);
  transition: background-color 0.25s;
  outline: none;
}

@media screen and (min-width: 500px) {
  .buttons {
    display: flex;
    justify-content: space-between;
  }

  .button {
    flex: 1;
    margin: 0 0.25rem;
    width: auto;
  }
}

